Increased font sizes a little and fixed header spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,8 +36,8 @@ $font-small: 11px;
 @import "dashboard";
 
 body {
-  padding-top: 5rem;
-  font-size: 14px;
+  padding-top: 4rem;
+  font-size: 15px;
   font-family: "Roboto Condensed", sans-serif;
   background: $grey-lightest;
 }
@@ -656,13 +656,13 @@ td.featured-middle {
 
 .link-row {
     display: block;
-    padding: 6px 0;
+    padding: 8px 0;
     border-top: 1px solid $grey-lightest;
     position: relative;
     
     i {
         position: absolute;
-        top: 8px;
+        top: 10px;
         right: 8px;
         font-size: 120%;
         color: $grey-light;
@@ -815,7 +815,7 @@ Breadcrumb nav
 nav.breadcrumb {
     background: transparent;
     padding-left: 0;
-    margin: -12px 0 8px 0;
+    margin: 0 0 8px 0;
 }
 
 nav.breadcrumb .arrow,
